# app/Models/Course.php
@@ -8,4 +8,12 @@ use Illuminate\Database\Eloquent\Model;
 class Course extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'name',
+        'description',
+        'fee',
+        'max_student',
+        'total_duration_days'
+    ];
 }
